--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/AustinCodingAcademy/web-workbook#readme",
   "dependencies": {
     "eslint": "^4.19.1",
+    "global": "^4.3.2",
     "htmllint-cli": "github:kevincolten/htmllint-cli",
     "http-server": "^0.11.1",
     "javascripting": "github:austincodingacademy/javascripting",
