--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "eslint": "^4.19.1",
     "global": "^4.3.2",
+    "htmllint": "^0.7.2",
     "htmllint-cli": "github:kevincolten/htmllint-cli",
     "http-server": "^0.11.1",
     "javascripting": "github:austincodingacademy/javascripting",
