--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "javascripting": "github:austincodingacademy/javascripting",
     "jquery": "^3.3.1",
     "jsdom": "^11.12.0",
+    "jshint": "^2.9.6",
     "lint": "^1.1.2",
     "mocha": "^5.2.0",
     "node-sass": "^4.9.3",
