--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/AustinCodingAcademy/web-workbook#readme",
   "dependencies": {
+    "aos": "^2.3.4",
     "eslint": "^4.19.1",
     "htmllint-cli": "github:kevincolten/htmllint-cli",
     "http-server": "^0.11.1",
