--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mocha": "^5.2.0",
     "node-sass": "^4.9.3",
     "postcss": "^6.0.23",
-    "stylelint": "^9.5.0"
+    "stylelint": "^9.5.0",
+    "tailwindcss": "^0.7.4"
   }
 }
